--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,20 @@
 alembic==1.7.7
+certifi==2021.10.8
+charset-normalizer==2.0.12
 click==8.1.3
+dnspython==2.2.1
 dominate==2.6.0
+email-validator==1.2.1
 Flask==2.1.2
 Flask-Bootstrap==3.3.7.1
 Flask-Login==0.6.1
 Flask-Migrate==2.6.0
 Flask-Reuploaded==1.2.0
-Flask-Script==2.0.6
+Flask-Script==2.0.5
 Flask-SQLAlchemy==2.5.1
 Flask-WTF==1.0.1
 greenlet==1.1.2
+idna==3.3
 importlib-metadata==4.11.3
 importlib-resources==5.7.1
 itsdangerous==2.1.2
@@ -17,7 +22,9 @@ Jinja2==3.1.2
 Mako==1.2.0
 MarkupSafe==2.1.1
 psycopg2==2.9.3
+requests==2.27.1
 SQLAlchemy==1.4.36
+urllib3==1.26.9
 visitor==0.1.3
 Werkzeug==2.1.2
 WTForms==3.0.1
